Retry isSelf on temporary DNS failure

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Repl 2022-09-19, Repl 2022-10-03
    • 5
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We sometimes fail getaddrinfo(), which is part of the "fast path" for isSelf, because of infrastructure problems. When we know from the error code (EAI_AGAIN) that this error is temporary, we should retry (with a backoff and up to a timeout).

            Assignee:
            Vesselina Ratcheva (Inactive)
            Reporter:
            Matthew Russotto (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: