SERVER-68800 Retry isSelf fast path on temporary DNS failure